Commit 1.0.0.3 -- Options required before adding product to gift registry -- Fix bug: Add To link not showing on some product pages

--- a/skin/frontend/base/default/css/giftregistry/giftregistry.css
+++ b/skin/frontend/base/default/css/giftregistry/giftregistry.css
@@ -405,6 +405,8 @@ p.registry_info {
 }
 .giftregistry-empty {
     color: #3399cc;
+    font-size: 16px;
+    margin-top: 15px;
 }
 
 .giftregistry-index-index a.giftregistry-share {
